# plutus-playground

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  plutus-playground.cabal
app/: Main.hs  SimpleValidators.hs
