cabal-version:   3.0
name:            plutus-playground
version:         0.1.0.0
license:
author:          alberto.fanton@protonmail.com
maintainer:      Alberto Fanton
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable plutus-playground
  import:             warnings
  main-is:            Main.hs
  other-modules:      SimpleValidators
  default-extensions:
    ImportQualifiedPost
    LambdaCase

  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  hs-source-dirs:     app
  default-language:   Haskell2010
